src/test/ui/fmt/format-concat-span.stderr
error: invalid format string: unmatched `}` found
  --> $DIR/format-concat-span.rs:13:13
   |
LL |     format!(concat!("abc}"));
   |             ^^^^^^^^^^^^^^^ unmatched `}` in format string
   |
   = note: if you intended to print `}`, you can escape it using `}}`
   = note: this error originates in the macro `concat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

